--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "cd client && bower install --config.interactive=false && gulp build"
   },
   "dependencies": {
+    "bower": "1.4.x",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~2.3.1",
     "gulp-angular-templatecache": "~1.6.0",
