--- a/client/bower.json
+++ b/client/bower.json
@@ -16,7 +16,8 @@
     "moment": "~2.10.3",
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
-    "angularjs-rails-resource": "~2.0.0"
+    "angularjs-rails-resource": "~2.0.0",
+    "ng-token-auth": "~0.0.27"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
